resources/sass/components/_contactUs.scss
.contactUs{
    width: 100%;
    height: 40rem;

    position: relative;


    pointer-events: all;
    
    &__container{
        max-width: $max-width;
        width: 100%;
        height: 100%;
        pointer-events: none;
        position: absolute;
        top: 1rem;
        margin: auto;
        right: 0;
        left: 0;
    }

    &__header{
        &-title{
            margin-top: 0;
        }
    }

    &__map{
        width: 100%;
        height: 100%;
        border: 0;
    }

    &__contactInfo{
        width: 35rem;
        min-height: 20rem;
        background-color: rgba(255,255,255,0.8);
        padding: 2rem;
        pointer-events: all;

        @import './subComponents/contactUsItem';

    }

}

